samples/_failures_safe/1761044267_1f56eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3868cc34.c: In function ‘print_stats’:
./samples/SAFE/__tmp_3868cc34.c:141:57: error: ‘const struct LogStats’ has no member named ‘most_frequent’; did you mean ‘most_frequent_level’?
  141 |     printf("Most frequent level: %s\n", analyzer->stats.most_frequent
      |                                                         ^~~~~~~~~~~~~
      |                                                         most_frequent_level
./samples/SAFE/__tmp_3868cc34.c:141:70: error: expected ‘)’ at end of input
  141 |     printf("Most frequent level: %s\n", analyzer->stats.most_frequent
      |           ~                                                          ^
      |                                                                      )
./samples/SAFE/__tmp_3868cc34.c:141:5: error: expected declaration or statement at end of input
  141 |     printf("Most frequent level: %s\n", analyzer->stats.most_frequent
      |     ^~~~~~
